@@ -4,11 +4,13 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static seedu.address.commons.core.Messages.MESSAGE_INVALID_COMMAND_FORMAT;
 import static seedu.address.commons.core.Messages.MESSAGE_UNKNOWN_COMMAND;
+import static seedu.address.logic.parser.CliSyntax.PREFIX_ID;
+import static seedu.address.logic.parser.CliSyntax.PREFIX_NAME;
 import static seedu.address.logic.parser.CliSyntax.PREFIX_REMARK;
 import static seedu.address.testutil.Assert.assertThrows;
 import static seedu.address.testutil.TypicalIndexes.INDEX_FIRST_PERSON;
 
-import java.util.Arrays;
+import java.util.HashSet;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -20,14 +22,15 @@ import seedu.address.logic.commands.DeleteCommand;
 import seedu.address.logic.commands.EditCommand;
 import seedu.address.logic.commands.EditCommand.EditPersonDescriptor;
 import seedu.address.logic.commands.ExitCommand;
-import seedu.address.logic.commands.FindCommand;
+import seedu.address.logic.commands.FindGuestCommand;
 import seedu.address.logic.commands.HelpCommand;
 import seedu.address.logic.commands.ListCommand;
 import seedu.address.logic.commands.RemarkCommand;
 import seedu.address.logic.parser.exceptions.ParseException;
-import seedu.address.model.hotel.person.NameContainsKeywordsPredicate;
+import seedu.address.model.hotel.person.Name;
 import seedu.address.model.hotel.person.Person;
 import seedu.address.model.hotel.person.Remark;
+import seedu.address.model.ids.PersonId;
 import seedu.address.testutil.EditPersonDescriptorBuilder;
 import seedu.address.testutil.PersonBuilder;
 import seedu.address.testutil.PersonUtil;
@@ -73,10 +76,20 @@ public class AddressBookParserTest {
 
     @Test
     public void parseCommand_find() throws Exception {
-        List<String> keywords = Arrays.asList("foo", "bar", "baz");
-        FindCommand command = (FindCommand) parser.parseCommand(
-                FindCommand.COMMAND_WORD + " " + keywords.stream().collect(Collectors.joining(" ")));
-        assertEquals(new FindCommand(new NameContainsKeywordsPredicate(keywords)), command);
+        List<String> nameList = List.of("John", "Alex");
+        List<String> personIdList = List.of("B13", "C28");
+        FindGuestCommand command = (FindGuestCommand) parser.parseCommand(
+                FindGuestCommand.COMMAND_WORD + " "
+                    + nameList.stream().map(p -> PREFIX_NAME + p)
+                        .collect(Collectors.joining(" ")) + " "
+                    + personIdList.stream().map(p -> PREFIX_ID + p)
+                        .collect(Collectors.joining(" "))
+        );
+        HashSet<Name> nameHashSet = new HashSet<>();
+        nameList.forEach(u -> nameHashSet.add(new Name(u)));
+        HashSet<PersonId> personIdHashSet = new HashSet<>();
+        personIdList.forEach(u -> personIdHashSet.add(new PersonId(u)));
+        assertEquals(new FindGuestCommand(nameHashSet, personIdHashSet), command);
     }
 
     @Test
